--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="disiiy.khaper.newsapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logonewsapp"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logonewsapp"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsApp">
-        <activity android:name=".activity.ProfileActivity"></activity>
+        <activity android:name=".activity.DetailActivity"></activity>
+        <activity android:name=".activity.ProfileActivity" />
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.ForgotPasswordActivity" />
         <activity android:name=".activity.SignUpActivity" />
